<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/etAddId"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etId"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etAddNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAddNombre"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etAddBodega"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddId" />

    <EditText
        android:id="@+id/etAddBodega"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etBodega"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etAddColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddNombre" />

    <EditText
        android:id="@+id/etAddColor"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etColor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etAddOrigen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddBodega" />

    <EditText
        android:id="@+id/etAddOrigen"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etOrigen"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etAddGraduacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddColor" />

    <EditText
        android:id="@+id/etAddGraduacion"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etGraduacion"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/etAddFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddOrigen" />

    <EditText
        android:id="@+id/etAddFecha"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etFecha"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btAddNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddGraduacion" />

    <Button
        android:id="@+id/btAddNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btConfirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>